--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   color: #444;
   line-height: 1.9;
@@ -140,7 +140,7 @@ img {
 }
 
 /* nav and stickly class at the same time */
-.nav.sticky {
+.sticky {
   position: fixed;
   background-color: rgba(255, 255, 255, 0.95);
 }
@@ -231,7 +231,7 @@ h4 {
 
 .highlight::after {
   display: block;
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -485,7 +485,7 @@ h4 {
 }
 
 .testimonial::before {
-  content: '\201C';
+  content: "\201C";
   position: absolute;
   top: -5.7rem;
   left: -6.8rem;
